# surreal-docs

./: CMakeLists.txt  LICENSE  README.md  build-machine.Dockerfile  build_installer_win64.json  build_request_linux.json  build_request_win64.json  conanfile.py  deploy_request.json  gcbuildallplatforms.yaml  gcbuildbuildmachine.yaml  gcbuildinstaller.yaml  gcdeploy.yaml  gcmirror.yaml  gulpfile.js  package-lock.json  package.json
exec/: CMakeLists.txt  main.cpp
installer/: EULA.rtf  (+3 more)
module_base/: ApiStatus.cpp  CMakeLists.txt  DocPathsCache.cpp  IdGenerator.cpp
module_base/doctree/: DocNode.cpp  ReferencableWordNode.cpp  SeeNode.cpp
module_base/doctree/blueprints/: BlueprintClassNode.cpp  BlueprintEnumElementNode.cpp  BlueprintEnumNode.cpp  BlueprintFunctionNode.cpp  BlueprintInitializerNode.cpp  BlueprintModuleNode.cpp  BlueprintParameterNode.cpp  BlueprintPropertyNode.cpp  BlueprintStructNode.cpp  BlueprintUNode.cpp  NativeClassCounterpart.cpp
module_base/doctree/blueprints/types/: BlueprintArrayTypeNode.cpp  BlueprintDelegateTypeNode.cpp  BlueprintEnumTypeNode.cpp  BlueprintInterfaceTypeNode.cpp  BlueprintMapTypeNode.cpp  BlueprintObjectTypeNode.cpp  BlueprintPrimitiveTypeNode.cpp  BlueprintSetTypeNode.cpp  BlueprintStructTypeNode.cpp  BlueprintTypeNode.cpp
module_base/doctree/docs/: DocsElementNode.cpp  DocsGroupNode.cpp  DocsImageNode.cpp  DocsIndexNode.cpp  DocsPageNode.cpp
module_base/doctree/native/: BlueprintableNode.cpp  DelegateTypeNode.cpp  LogCategoryNode.cpp  NativeClassNode.cpp  NativeEnumElementNode.cpp  NativeEnumNode.cpp  NativeFunctionNode.cpp  NativeInitializerNode.cpp  NativeMemberNode.cpp  NativeModuleNode.cpp  NativeParameterNode.cpp  NativePropertyNode.cpp  NativeTypeNode.cpp  TemplateNode.cpp  UeInfoNode.cpp
module_base/include/udocs-processor/: ApiStatus.h  DocPathsCache.h  IdGenerator.h
module_base/include/udocs-processor/doctree/: AccessModifier.h  DocNode.h  DocNodeVisitor.h  HasCounterpart.h  NodeTypeChecker.h  ReferencableWordNode.h  SeeNode.h
module_base/include/udocs-processor/doctree/blueprints/: BlueprintClassNode.h  BlueprintClassParentNode.h  BlueprintEnumElementNode.h  BlueprintEnumNode.h  BlueprintFunctionNode.h  BlueprintInitializerNode.h  BlueprintModuleNode.h  BlueprintParameterNode.h  BlueprintPropertyNode.h  BlueprintStructNode.h  BlueprintUNode.h  NativeClassCounterpart.h
module_base/include/udocs-processor/doctree/docs/: DocsElementNode.h  DocsGroupNode.h  DocsImageNode.h  DocsIndexNode.h  DocsPageNode.h
module_base/include/udocs-processor/doctree/native/: BlueprintableNode.h  ClassParentNode.h  DelegateTypeNode.h  LogCategoryNode.h  NativeClassNode.h  NativeEnumElementNode.h  NativeEnumNode.h  NativeFunctionNode.h  NativeInitializerNode.h  NativeMemberNode.h  NativeModuleNode.h  NativeParameterNode.h  NativePropertyNode.h  NativeTypeNode.h  TemplateNode.h  UeInfoNode.h
module_cli/: CMakeLists.txt
module_cli/cli/: CLISignalHandler.cpp  SurDocsCLI.cpp
module_cli/cli/cli/: GenerateCLI.cpp  InitCLI.cpp
module_cli/cli/commands/: GenerateCommand.cpp  InitCommand.cpp
module_cli/cli/commands/generate/: BpPreparer.cpp  CppPreparer.cpp  Generator.cpp
module_cli/cli/commands/generate/rendering/: Templater.cpp  UDocsDocumentRenderer.cpp
module_cli/cli/surreal/: SurrealLoader.cpp
module_cli/cli/ue/: UnrealInteraction.cpp
module_cli/cli/version/: VersionChecker.cpp  grpc.cpp  grpcProductService.cpp
module_cli/cli/views/: FtxGenerateView.cpp  FtxInitView.cpp  FtxView.cpp  GenerateView.cpp  NonInteractiveGenerateView.cpp  View.cpp
module_cli/include/udocs-processor/cli/: CLISignalHandler.h  SurDocsCLI.h
module_cli/include/udocs-processor/cli/cli/: GenerateCLI.h  InitCLI.h
module_cli/include/udocs-processor/cli/commands/: GenerateCommand.h  InitCommand.h
module_cli/include/udocs-processor/cli/surreal/: SurrealLoader.h
module_cli/include/udocs-processor/cli/ue/: UnrealInteraction.h
module_processor/: CMakeLists.txt  LocationBuilder.cpp  NodeHasher.cpp  UDocsProcessor.cpp
module_processor/include/udocs-processor/: LocationBuilder.h  NodeHasher.h  UDocsProcessor.h  platform.h  version.h
module_processor/include/udocs-processor/subprocessors/: ComplementFinder.h  CrossReferencer.h  DocPathBuilder.h  ExportPolicy.h  ReferenceCacheBuilder.h  Subprocessor.h
module_processor/include/udocs-processor/treeloaders/: DocCommentProcessor.h  DoxybookDataLoader.h  DoxybookTreeLoader.h  PagesTreeLoader.h  TreeLoader.h  UDataTreeLoader.h
module_processor/treeloaders/: DocCommentProcessor.cpp  DoxybookDataLoader.cpp  PagesTreeLoader.cpp  TreeLoader.cpp
module_report/: CMakeLists.txt
module_report/include/udocs-processor/report/: ProcessingReport.h  ReportSpdLogSink.h
module_report/report/: ProcessingReport.cpp
module_serializer/: CMakeLists.txt  LoggerRegistrar.cpp
module_serializer/include/udocs-processor/: LoggerRegistrar.h
module_serializer/include/udocs-processor/serializers/: DocTreeSerializer.h  DynamicPageData.h  HTMLDocTreeSerializer.h  JSONDocTreeSerializer.h  UFunctionHTMLSerializer.h  UFunctionSerializer.h
module_serializer/serializers/: DocTreeSerializer.cpp  DynamicPageData.cpp  UFunctionHTMLSerializer.cpp  UFunctionSerializer.cpp
module_serializer/serializers/markdown/: SurrealMarkdown.cpp
module_serializer/serializers/type/: UTypeHTMLSerializer.cpp  UTypeMarkdownSerializer.cpp  UTypeToImagesSerializer.cpp  UTypeToStringSerializer.cpp
module_serializer/serializers/util/: IsLinkInternalDecider.cpp
module_telemetry/: CMakeLists.txt
module_telemetry/include/udocs-processor/telemetry/: BasicTelemetry.h  LogReporter.h  TelemetryReporter.h  TelemetryService.h  grpc.h  grpcTelemetryService.h
module_telemetry/telemetry/: BasicTelemetry.cpp  LogReporter.cpp  TelemetryReporter.cpp  grpc.cpp  grpcTelemetryService.cpp
module_util/: CMakeLists.txt  ExecStreamHelper.cpp  FileDataLoader.cpp  NodesHelper.cpp  StringHelper.cpp
module_util/include/udocs-processor/: ExecStreamHelper.h  FileDataLoader.h  NodesHelper.h  StringHelper.h
tests/: CMakeLists.txt  SurrealMarkdownTests.cpp
(+130 files in other folders)
